# snip20-reference-impl

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
src/: btbe.rs  burn.rs  channel.rs  constants.rs  contract.rs  crypto.rs  dwb.rs  evaporate.rs  gas_tracker.rs  legacy_append_store.rs  legacy_state.rs  legacy_viewing_key.rs  lib.rs  msg.rs  notifications.rs  old_state.rs  signed_doc.rs  state.rs  transaction_history.rs
tests/dwb/: bun.lockb  package.json
tests/dwb/src/: constants.ts  contract.ts  dwb-entry.ts  dwb.ts  gas-checker.ts  helper.ts  main.ts  snip.ts
tests/migrate/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
tests/migrate/src/: constants.ts  contract.ts  cosmos.ts  dwb-entry.ts  dwb.ts  eoa.ts  evaluator.ts  functions.ts  global.ts  helper.ts  main.ts  parser.ts  program.ts  snip.ts  test-dwb.ts  types.ts  util.ts
