[package]
name = "snip20-reference-impl"
version = "1.0.0"
authors = ["Itzik <itzik@keytango.io>","darwinzer0"]
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#default = ["debug-print"]
default = []
backtraces = ["cosmwasm-std/backtraces"]

# debug-print = ["cosmwasm-std/debug-print"]
[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"  }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11"  }
rand = { version = "0.8.5", default-features = false }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["permit", "storage", "viewing-key"] }
secret-toolkit-crypto = { version = "0.10.0", features = ["rand", "hash"] }

schemars = "0.8.12"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
base64 = "0.21.0"

minicbor-ser = "0.2.0"
thiserror = { version = "1.0" }
ripemd = { version = "0.1.3", default-features = false }
remain = "0.2.8"
bech32 = "0.9.1"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = "0.10.6"
hkdf = "0.12.3"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "rand_core"] }
generic-array = "0.14.7"
subtle = { version = "2.2.3", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }
